# OnexExplorerCli

./: .gitignore  .gitmodules  AGENT.md  CMakeLists.txt  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  archive__format_8h.html  build__info_8h.html  ccinf__archive__format_8h.html  classonex_1_1archive_1_1CcinfArchiveFormat.html  classonex_1_1archive_1_1NosArchive.html  classonex_1_1archive_1_1TextArchiveFormat.html  classonex_1_1archive_1_1ZlibArchiveFormat.html  classonex_1_1downloader_1_1CurlHttpClient.html  classonex_1_1downloader_1_1GameforgeDownloader.html  classonex_1_1downloader_1_1HttpClient.html  classonex_1_1util_1_1ThreadPool.html  codec_8h.html  converter_8h.html  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_31a378c84b956866319ca9d9294f1959.html  dir_7f2b15da23139c8575026d2516b6f4fc.html  dir_82f8db40a875a0d04155bc42b28473f0.html  dir_a864d2aa5f82338b9e095b258bfa929f.html  dir_bb81aed1da3f98d708f5a455e2be06d7.html  dir_f1636c42a46aaf4ddb0e34aa3257e6b3.html  downloader_8h.html  entry_8h.html  entry__image_8h.html  error_8h.html  extract_all_nos.py  files.html  format.html  format_8dox.html  group__pixel__format__converters.html  http__client_8h.html  index.html  (+28 more)
.github/workflows/: docs-build.yml  documentation.yaml  install.yml  macos.yml  release.yml  standalone.yml  style.yml  test.yml  ubuntu.yml  windows.yml
benchmark/: README.md  TODO.md  __main__.py  bench.py  config.py  report.py  requirements.txt  runner.py
docs/agents/: domain.md
documentation/: CMakeLists.txt  Doxyfile  conf.py
documentation/pages/: about.dox  format.dox  supported.dox  usage.dox
include/onex/: download.hpp  onex.h  sha1.h
include/onex/archive/: archive_format.h  ccinf_archive_format.h  codec.h  entry.h  nos_archive.h  text_archive_format.h  text_dat_codec.h  text_lst_codec.h  zlib_archive_format.h  zlib_codec.h
include/onex/archive/image/: converter.h  entry_image.h  pixel_format.h
include/onex/core/: error.h
include/onex/downloader/: build_info.h  downloader.h  http_client.h  sha1.h
include/onex/util/: thread_pool.h
include/onexexplorer/: onexplorer.h  stb_image_write.h
include/onexplorer/: onexplorer.h  stb_image_write.h
source/: download.cpp  onex.cpp  onexplorer.cpp  sha1.cpp  stb_image_write_impl.cpp
source/archive/: archive_format.cpp  ccinf_archive_format.cpp  nos_archive.cpp  text_archive_format.cpp  zlib_archive_format.cpp  zlib_codec.cpp
source/archive/image/: converter.cpp  entry_image.cpp
source/archive/image/converter/: argb555.cpp  barg4444.cpp  bgra8888.cpp  bgra8888_interlaced.cpp  common.h  gbar4444.cpp  grayscale.cpp  nstc.cpp
source/codecs/: text_dat_codec.cpp  text_lst_codec.cpp
source/downloader/: build_info.cpp  downloader.cpp  http_client.cpp  sha1.cpp
source/util/: thread_pool.cpp
standalone/: CMakeLists.txt
standalone/source/: common.cpp  common.h  download.cpp  extract.cpp  info.cpp  list.cpp  main.cpp
test/: CMakeLists.txt
test/benchmark/: BASELINE.md  CMakeLists.txt  COMPARISON_vs_taletool.md  RESULTS_fpng.md
test/benchmark/source/: benchmark.cpp
test/source/: archive.cpp  codec.cpp  download.cpp  downloader_build_info.cpp  downloader_network.cpp  downloader_resolve.cpp  downloader_sha1.cpp  fixture.h  image_converter.cpp  onex.cpp  onexplorer.cpp  text_codec.cpp  zlib.cpp
wasm/: .gitignore  CMakeLists.txt  build.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
wasm/cpp/: bindings.cpp
wasm/src/: archive.ts  downloader.ts  index.ts  onex.ts  types.ts
wasm/src/__tests__/: archive.test.ts  downloader.test.ts  mock.ts
wasm/wasm/: onex_explorer_wasm.d.ts
